--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "choices.js": "^11.0.2"
   }
 }
